# MyStuff

CSharp/CarPartsShop/: CarPartsShop.sln
Cpp/Guzik/: Guzik.sln  InputSequence.rtf  tasks.txt
DataScrape/Tavex/: austrian-ducat-gold-coin.txt  datascrapeTavex.py  french-20francs-marianne.txt  runTavexDatascrape.cmd  uploadTavex.py
DatingLeadS/: CalculateLeadMass.py  CreateStandAloneExecutable.txt  HMax.py  HMin.py  OpenFile.py  RunProgram.py  SetupExec.py  ro.py
DatingLeadS/Input/: InputFile.txt  SZ6  testData
DatingLeadS/Measurements-SZ/: Comperison.OPJ
DatingLeadS/Output/: ResultVec.txt
DesignPatterns/Maze/: Direction.h  Door.cpp  Door.h  DoorNeedingSpell.cpp  DoorNeedingSpell.h  EnchantedMazeFactory.cpp  EnchantedMazeFactory.h  EnchantedRoom.cpp  EnchantedRoom.h  MapSite.h  Maze.cpp  Maze.h  Maze.sln  Maze.vcxproj  Maze.vcxproj.filters  MazeBuilder.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  MazeMain.cpp  Room.cpp  Room.h  Spell.h  StandardMazeBuilder.cpp  StandardMazeBuilder.h  Wall.cpp  Wall.h
FEMSolver/: BndCond.py  BndCondZero.py  FEMExample.py  FEMLaplaceSolver.py  FEMSolver.wpr  GetStiffnessMatrix3.py  PlotTriData.py  RightSide.py  SetDiff.py  Unique.py  test.py
FEMSolver/Meshing/: __init__.py  createMesh.py  domain.txt  meshToStl.py  plotFacets.py
GPP_TheoreticalTest-1stTest/Source/: Advanced01.cpp  Advanced02.cpp  Advanced03.cpp  Advanced04.cpp  Advanced05.cpp  Advanced06.cpp  Algo01.cpp  Algo02.cpp  Basics01.cpp  Basics02.cpp  Basics03.cpp  Basics04.cpp  Basics05.cpp  Basics06.cpp  Basics08.cpp  Basics09.cpp  Basics11.cpp  Basics12.cpp  Basics13.cpp  Basics14.cpp  Math01.cpp  Math02.cpp
HackerRank/IsFibo/: isFibo.py
LearnAndDevelop/: CMakeLists.txt  LearnAndDevelop.mk  LearnAndDevelop.project  LearnAndDevelop.sln  LearnAndDevelop.workspace  rebuildMe.sh
LearnAndDevelop/Basics/: Basics.cpp  Basics.vcxproj  Basics.vcxproj.filters  CMakeLists.txt  PerfectForwarding.h  Resource.h
LearnAndDevelop/MultiThreading/: BarrierUsage.cpp  BarrierUsage.h  CMakeCache.txt  CMakeLists.txt  CondVariable.cpp  CondVariable.h  FutureUsage.cpp  Futureusage.h  LatchUsage.cpp  LatchUsage.h  MultiThreading.cpp  MultiThreading.vcxproj  MultiThreading.vcxproj.filters  MutexUsage.cpp  MutexUsage.h
LearnAndDevelop/Parallelism/: CMakeLists.txt  main.cpp
LearnAndDevelop/Udemy/: CMakeLists.txt  ConcurentStructuresModifier.cpp  ConcurentStructuresModifier.h  Exercise1.cpp  ExercisesMain.cpp  FizzBuzz.cpp  FizzBuzz.h  Monitor.cpp  Monitor.h  ThreadBenchmark.cpp  ThreadBenchmark.h  ThreadPool.cpp  ThreadPool.h  ThreadQueue.cpp  ThreadQueue.h  Worker.cpp  Worker.h
LearnAndDevelop/UdemyDP/: CMakeLists.txt  main.cpp
LearnAndDevelop/UdemyDP/ImageProxy/: Bitmap.cpp  Bitmap.h  BitmapProxy.cpp  BitmapProxy.h  CMakeLists.txt  Image.cpp  Image.h  main.cpp
arduino/: ElectronicSwitch.txt
arduino/CameraWebServer/: CameraWebServer.ino  (+2 more)
nfl/: DefensiveRankingw11.txt  DefensiveRankingw15.txt  DefensiveRankingw16.txt  DefensiveRankingw3.txt  DefensiveRankingw4.txt  DefensiveRankingw5.txt  DefensiveRankingw6.txt  DefensiveRankingw7.txt  DefensiveRankingw8.txt  DefensiveRankingw9.txt  MatchupWeek.txt  MatchupWeek1.txt  MatchupWeek10.txt  MatchupWeek11.txt  MatchupWeek13.txt  MatchupWeek14.txt  MatchupWeek15.txt  MatchupWeek16.txt  MatchupWeek17.txt  MatchupWeek18.txt  MatchupWeek2.txt  MatchupWeek3.txt  MatchupWeek4.txt  MatchupWeek5.txt  MatchupWeek6.txt  MatchupWeek7.txt  MatchupWeek8.txt  MatchupWeek9.txt  OffensiveRankingFPTS.txt  OffensiveRankingFPTSw11.txt  OffensiveRankingFPTSw16.txt  OffensiveRankingFPTSw2.txt  OffensiveRankingFPTSw6.txt  OffensiveRankingFPTSw7.txt  OffensiveRankingw3.txt  OffensiveRankingw4.txt  OffensiveRankingw5.txt  OffensiveRankingw6.txt  OffensiveRankingw7.txt  OffensiveRankingw8.txt
plotter/VTK_Visualization/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  NewFile  VTK_Visualization - Copy.cpp  VTK_Visualization.cpp  VTK_Visualization.h  VTK_Visualization.prjct  VTK_Visualization.project  VTK_Visualization.workspace  Viewer.cpp  configuration.json  launch.vs.json  main.cpp  rebuildMe.sh
plotter/VTK_Visualization/DB/: VTK_Database.cpp  VTK_Database.h  VTK_FileSeries.cpp  VTK_FileSeries.h
plotter/VTK_Visualization/DB/vtk/: VTK_Database.cpp
plotter/VTK_Visualization/UI/: VTK_CFDVisualizer.cpp  VTK_CFDVisualizer.h
plotter/VTK_Visualization/UI/vtk/: ScalarBarFactory.cpp  ScalarBarFactory.h  SliderWidgetWrapper.cpp  SliderWidgetWrapper.h  VTK_CFDVisualizer.cpp  VTK_CFDVisualizer.h  VTK_DBWrapper.cpp  VTK_DBWrapper.h  VisualizationConfigurator.cpp  VisualizationConfigurator.h
plotter/VTK_Visualization/common/vtk/: VTK_DBWrapper.cpp
plotter/VTK_Visualization/configuration/json/: JSONConfigParser.cpp  JSONConfigParser.h  KeyControlsConfigurator.cpp  KeyControlsConfigurator.h  VisualizationConfigurator.cpp  VisualizationConfigurator.h
plotter/VTK_Visualization/design/: Untitled Diagram.drawio.html  Untitled Diagram.drawio.xml  cfd_viewer.drawio.html  cfd_viewer.drawio.xml  plotter.drawio.html
plotter/VTK_Visualization/include/: AbstractDB.h  CrossSection.h  IConfigurator.h  IDB.h  IKeyControlsConfigurator.h  IPresenter.h  IUI.h  IVisualizationConfigurator.h  IVisualizer.h  VisuType.h
plotter/VTK_Visualization/include/vtk/: VTK_DBWrapper.h
plotter/VTK_Visualization/presenter/: MeshVisualization.cpp  MeshVisualization.h  Presenter.cpp  Presenter.h  PressureVisualization.cpp  PressureVisualization.h  VTK_Presenter.cpp  VTK_Presenter.h  VelocityVisualization.cpp  VelocityVisualization.h  VisualizationFactory.cpp  VisualizationFactory.h  VisualizationStrategy.h
plotter/VTK_Visualization/presenter/vtk/: MeshVisualization.cpp  MeshVisualization.h  PressureVisualization.cpp  PressureVisualization.h  VelocityGlyphVisualization.cpp  VelocityGlyphVisualization.h  VelocityMagnitudeVisualization.cpp  VelocityMagnitudeVisualization.h  VelocityVisualization.cpp  VelocityVisualization.h  VisualizationFactory.cpp  VisualizationFactory.h  VisualizationStrategy.h
plotter/VTK_minimal/: CMakeLists.txt  main.cpp
(+195 files in other folders)
